--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
     <title>JS</title>
     <style>
       * {
-        font-family: "Courier New", Courier, monospace;
+        font-family:Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
   <body class="text-bg-dark">
-    <div class="container">
-      <a
-        class="nav-link text-bg-danger py-2 rounded text-center my-2"
-        href="./dataTypes/data-types.html"
-        >Data Types In JS</a
-      >
+    <div class="container my-2">
+     
+     <button class="btn btn-primary">
+<a 
+       class="nav-link  py-2 rounded text-center"
+       href="./dataTypes/data-types.html"
+       >Data Types In JS</a
+       >
+      </button> 
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
