--- a/dataTypes/data-types.html
+++ b/dataTypes/data-types.html
@@ -9,17 +9,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>JS</title>
-    <style>
-      * {
-        font-family: "Courier New", Courier, monospace;
-      }
-    </style>
+    <title>JS | DataTypes</title>
+    
+    <script src="./DataTypes.js"></script>
   </head>
   <body class="text-bg-dark">
-    <div class="container">
-      <h2>Data Types in JS</h2>
-      <div class="row g-2">
+    <div class="container bg-black rounded py-3">
+      <h2 class="text-center text-bg-warning rounded border-bottom py-2">Data Types in JS</h2>
+      <div class="row g-2 my-2 border-bottom border-secondary  py-2">
         <div class="col-auto">
           <a href="#number" class="text-bg-primary p-2 rounded nav-link"
             >Number</a
@@ -56,7 +53,7 @@
           >
         </div>
       </div>
-      <div class="row justify-content-center align-items-center">
+      <div class="row ">
         <div class="col-auto" id="number">
           <div class="card text-bg-primary text-light shadow my-2">
             <div class="card-header fw-bold text-center">Number</div>
