--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
        >Data Types In JS</a
        >
       </button> 
+      <section class="my-2">
+        <h4 class="fw-bold py-2 border-bottom border-secondary">PROJECTS</h4>
+        <a href="./projects/gen-z.html">
+          
+          <img src="https://cdn.dribbble.com/userupload/4286079/file/original-759ae08af90ec49dd7294b927605bdb7.png?resize=752x564&vertical=center" alt="" srcset="" class="img-fluid rounded">
+        </a>
+        </section>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
